tests/ui/concurrent_cached_custom_ty_required.stderr
error: #[concurrent_cached] cache `ty` must be specified
 --> tests/ui/concurrent_cached_custom_ty_required.rs:4:4
  |
4 | fn my_fn(k: i32) -> Result<i32, String> {
  |    ^^^^^
